Blender crashes when scaling or rotating in UV Image Editor #39653

Closed
opened 2014-04-09 10:59:38 +02:00 by Heiko Schmidt · 21 comments

System Information
Win7 64bit GTX 285

Blender Version
2.70 dfbd994

Open the attached file and go in Image Editor Full Screen mode and press for example S or R. Blender crashes. When I remove the Edge Split modifier no crash happens.uv_bug.blend

**System Information** Win7 64bit GTX 285 **Blender Version** 2.70 dfbd994 Open the attached file and go in Image Editor Full Screen mode and press for example S or R. Blender crashes. When I remove the Edge Split modifier no crash happens.[uv_bug.blend](https://archive.blender.org/developer/F84350/uv_bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @heik

Added subscriber: @heik

Added subscriber: @Sergey

Added subscriber: @Sergey

Can not reproduce the crash here on linux.

Does it happen with latest builds from builder.blender.org or official 2.70 release?

Can not reproduce the crash here on linux. Does it happen with latest builds from builder.blender.org or official 2.70 release?

Added subscriber: @willi-2

Added subscriber: @willi-2

Can't repro either on Win7/64 (+AMD HD6850). Neither 2.70 official nor latest build.

Can't repro either on Win7/64 (+AMD HD6850). Neither 2.70 official nor latest build.
Author

It looks like the crash only happens with VBOs enabled.

It looks like the crash only happens with VBOs enabled.

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Can't redo with the VBOs enabled as well. Could be something GPU or platform specific.

@ThomasDinges, mind testing this issue?

Can't redo with the VBOs enabled as well. Could be something GPU or platform specific. @ThomasDinges, mind testing this issue?
Author

I just tested it again with the official blender builds (win32, 1ce726a), (win64, 9b60174) and with an own build (df63e8f) under Linux Ubuntu (but Virtual Machine) and allways the same crash (after loading factory settings no crash, but a crash as soon after I activated VBOs).

I just tested it again with the official blender builds (win32, 1ce726a), (win64, 9b60174) and with an own build (df63e8f) under Linux Ubuntu (but Virtual Machine) and allways the same crash (after loading factory settings no crash, but a crash as soon after I activated VBOs).

@heik, virtual machine doesn't count. It might have buggy GPU which wouldn't support VBOs ;)

@heik, virtual machine doesn't count. It might have buggy GPU which wouldn't support VBOs ;)
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne
Member

I'm getting an assert failure with the test file here:
https://developer.blender.org/diffusion/B/browse/master/source/blender/gpu/intern/gpu_buffers.c$508

Note that going full-screen with image editor is actually necessary for this to happen, in split layout it won't fail on the assert (presumably because without a 3D view the dm doesn't get initialized?)

I'm getting an assert failure with the test file here: https://developer.blender.org/diffusion/B/browse/master/source/blender/gpu/intern/gpu_buffers.c$508 Note that going full-screen with image editor is actually necessary for this to happen, in split layout it won't fail on the assert (presumably because without a 3D view the dm doesn't get initialized?)
Antonis Ryakiotakis was assigned by Campbell Barton 2014-05-06 09:34:33 +02:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Psy-fi, Should this be an exception where initializing materials isnt needed? draw_uvs_dm_shadow is just drawing UV's so there's not really any point in requiring materials.

Psy-fi, Should this be an exception where initializing materials isnt needed? `draw_uvs_dm_shadow` is just drawing UV's so there's not really any point in requiring materials.

I don't like those material initializations all over the place either but there's a catch I think. If the same object is drawn on the viewport for instance, this would create the GPUObject and any subsequent drawing in 3D viewport using VBOs would not have the materials correctly assigned. So better prepare the mesh buffers correctly anyway.

I don't like those material initializations all over the place either but there's a catch I think. If the same object is drawn on the viewport for instance, this would create the GPUObject and any subsequent drawing in 3D viewport using VBOs would not have the materials correctly assigned. So better prepare the mesh buffers correctly anyway.

The reason this bug happens in full screen is that the GPUObject is already initialized in viewport. Do we really have any guarantee that the viewport will always be processed first though? I don't think so, better go by the 'book' :)

The reason this bug happens in full screen is that the GPUObject is already initialized in viewport. Do we really have any guarantee that the viewport will always be processed first though? I don't think so, better go by the 'book' :)

This issue was referenced by blender/blender-addons-contrib@02b1dbef8c

This issue was referenced by blender/blender-addons-contrib@02b1dbef8cff6427bae9dc9e0da6d502a07d035c

This issue was referenced by 02b1dbef8c

This issue was referenced by 02b1dbef8cff6427bae9dc9e0da6d502a07d035c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 02b1dbef8c.

Closed by commit 02b1dbef8c.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39653
No description provided.